# http-server

./: CMakeLists.txt  conanfile.txt  large.json  readme.md  run.sh
data/: index.html
include/: ArgumentParser.h  FileReader.h  HttpParser.h  Logger.h  StringUtils.h  TcpSocket.h
src/: ArgumentParser.cpp  FileReader.cpp  HttpParser.cpp  Logger.cpp  StringUtils.cpp  TcpSocket.cpp  main.cpp
test/: CMakeLists.txt  test_argument_parser.cpp  test_file_reader.cpp  test_http_parser.cpp  test_string_utils.cpp
test/data/: myfile.txt
